--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-# Ignore Gradle project-specific cache directory
-.gradle
-
-# Ignore Gradle build output directory
-build
+.gradle/
+build/
+.idea/
+*.iml
+*.ipr
+*.iws
+*.log*
+target/
+/out/
+**/out/**
+.DS_Store
